force-app/main/default/objects/Account/fields/Agencia_Intermediador__c.field-meta.xml
<CustomField>
    <fullName>Agencia_Intermediador__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Agência / Intermediador</label>
    <type>Checkbox</type>
</CustomField>