force-app/main/default/objects/Account/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <description>CNPJ da empresa</description>
    <inlineHelpText>CNPJ da empresa</inlineHelpText>
    <label>CNPJ</label>
    <length>18</length>
    <type>Text</type>
</CustomField>