force-app/main/default/objects/Account/fields/DataMaxTermino__c.field-meta.xml
<CustomField>
    <fullName>DataMaxTermino__c</fullName>
    <label>Data Máxima Termino</label>
    <type>Date</type>
</CustomField>