force-app/main/default/objects/Account/fields/DataMinInicio__c.field-meta.xml
<CustomField>
    <fullName>DataMinInicio__c</fullName>
    <label>Data Mínima Inicio</label>
    <type>Date</type>
</CustomField>