force-app/main/default/objects/Account/fields/ExternalAccountID__c.field-meta.xml
<CustomField>
    <fullName>ExternalAccountID__c</fullName>
    <externalId>true</externalId>
    <label>External Account ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>