force-app/main/default/objects/Account/fields/MarketingInvestment__c.field-meta.xml
<CustomField>
    <fullName>MarketingInvestment__c</fullName>
    <description>Qual é o investimento em marketing mensal informado</description>
    <label>Investimento em marketing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Menos que R$ 1 mil</fullName>
            </value>
            <value>
                <fullName>De R$ 1 mil até R$ 5 mil</fullName>
            </value>
            <value>
                <fullName>De R$ 5 mil até R$ 20 mil</fullName>
            </value>
            <value>
                <fullName>Mais de R$ 20 mil</fullName>
            </value>
            <value>
                <fullName>Não invisto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>