force-app/main/default/objects/Account/fields/Mediator__c.field-meta.xml
<CustomField>
    <fullName>Mediator__c</fullName>
    <description>Caso tenha intermediação, o objeto &quot;intermediação&quot; precisa estar associado</description>
    <label>Intermediador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>