force-app/main/default/objects/Account/fields/Risco_Legal_SGC__c.field-meta.xml
<CustomField>
    <fullName>Risco_Legal_SGC__c</fullName>
    <description>Risco Legal KPMG - atualização do SGC</description>
    <label>Risco Legal SGC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>