force-app/main/default/objects/Account/fields/Score_Financeiro_SGC__c.field-meta.xml
<CustomField>
    <fullName>Score_Financeiro_SGC__c</fullName>
    <description>Score Financeiro - atualização do SGC</description>
    <label>Score Financeiro SGC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>