force-app/main/default/objects/Account/fields/Score_ReclameAqui_SGC__c.field-meta.xml
<CustomField>
    <fullName>Score_ReclameAqui_SGC__c</fullName>
    <label>Score ReclameAqui SGC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>