force-app/main/default/objects/Account/fields/Tamanho__c.field-meta.xml
<CustomField>
    <fullName>Tamanho__c</fullName>
    <description>O tamanho da conta é uma estimativa do tamanho da empresa.</description>
    <inlineHelpText>O tamanho da conta é uma estimativa do tamanho da empresa.</inlineHelpText>
    <label>Tamanho</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>