force-app/main/default/objects/Account/fields/Tipodeintermediador__c.field-meta.xml
<CustomField>
    <fullName>Tipodeintermediador__c</fullName>
    <label>Tipo de intermediador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agência</fullName>
            </value>
            <value>
                <fullName>Assinante Aceleraí Agências</fullName>
            </value>
            <value>
                <fullName>Cliente Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>