force-app/main/default/objects/Account/fields/TradeName__c.field-meta.xml
<CustomField>
    <fullName>TradeName__c</fullName>
    <label>Nome Fantasia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>