force-app/main/default/objects/Account/fields/TypeIntermediary_2__c.field-meta.xml
<CustomField>
    <fullName>TypeIntermediary_2__c</fullName>
    <label>Tipo de Intermediador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agência</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>