force-app/main/default/objects/Account/fields/TypeIntermediary__c.field-meta.xml
<CustomField>
    <fullName>TypeIntermediary__c</fullName>
    <label>Tipo de intermediador</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assinante Aceleraí Agências</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>