force-app/main/default/objects/Account/fields/TypePlanAceleraiAgencias__c.field-meta.xml
<CustomField>
    <fullName>TypePlanAceleraiAgencias__c</fullName>
    <label>Tipo de plano Aceleraí Agências</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plano 1</fullName>
            </value>
            <value>
                <fullName>Plano 2</fullName>
            </value>
            <value>
                <fullName>Plano 3</fullName>
            </value>
            <value>
                <fullName>Plano 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>