force-app/main/default/objects/Account/validationRules/Require_City_And_Stat_eOn_New_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_City_And_Stat_eOn_New_Account</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; OR(ISBLANK(BillingState), ISBLANK(BillingCity))</errorConditionFormula>
    <errorMessage>Por favor, preencha a Cidade e Estado</errorMessage>
</ValidationRule>