force-app/main/default/objects/Account/listViews/Contas_Parabola.listView-meta.xml
<ListView>
    <fullName>Contas_Parabola</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>(NAO ALTERAR) Contas - Parabola</label>
    <sharedTo>
        <group>Parabola</group>
    </sharedTo>
</ListView>